# Morze

./: .gitignore
.github/workflows/: ai-review.yml  ci.yml  deploy.yml  jira-status-update.yml  metrics.yml
client/: CMakeLists.txt  GlobalEnums.h  config.json  main.cpp
client/DI/: DependencyContainer.cpp  DependencyContainer.h
client/GlobalConverters/: TimePointConverter.h  UUIDConverter.h
client/GlobalEnums/: DeliveryStateConverter.h
client/config/: ConfigManager.cpp  ConfigManager.h
client/controllers/DTO/: ChatDTO.h  ChatMemberDTO.h  ConnectionProfileDTO.h  MessageDTO.h  UserDTO.h
client/controllers/DTO/converters/: ChatDTOConverter.h  ChatMemberDTOConverter.h  ConnectionProfileDTOConverter.h  MessageDTOConverter.h  UserDTOConverter.h
client/controllers/controllers/: CommunicationController.cpp  CommunicationController.h
client/exceptions/: ChatExcpetions.h  ChatMemberExceptions.h  ConnectionProfileExceptions.h  MessageExceptions.h  UserExceptions.h
client/globalConverters/: TimePointConverter.h  UUIDConverter.h
client/globalEnums/: ChatTypeConverter.h  DeliveryStateConverter.h  GlobalEnums.h  MessageDirectionConverter.h
client/gui/: CMakeLists.txt  ClientBridge.cpp  ClientBridge.h  Main.qml  main.cpp
client/gui/img/src/: morze.drawio
client/repositories/: DBConfiguration.h
client/repositories/DAO/: ChatDAO.h  ChatMemberDAO.h  ChatMemberRelationDAO.h  ConnectionProfileDAO.h  MessageDAO.h  UserDAO.h
client/repositories/DAO/Converters/: ChatDAOConverter.h  ChatMemberDAOConverter.h  MessageDAOConverter.h
client/repositories/DAO/converters/: ChatMemberDAOConverter.h  ConnectionProfileDAOConverter.h  UserDAOConverter.h
client/repositories/dbContext/: Database.cpp  Database.h
client/repositories/migrations/: Database.cpp  Database.h
client/repositories/repositories/: ChatMemberRepository.cpp  ChatMemberRepository.h  ChatRepository.cpp  ChatRepository.h  ConnectionProfileRepository.cpp  ConnectionProfileRepository.h  MessageRepository.cpp  MessageRepository.h  UserRepository.cpp  UserRepository.h
client/scripts/run_tests/: repository_tests.sh
client/services/Models/: ChatMemberModel.h  ChatModel.h  ConnectionProfileModel.h  MessageModel.h  UserModel.h
client/services/services/: CanaryChecker.cpp  CanaryChecker.h  ChatMemberService.cpp  ChatMemberService.h  ChatService.cpp  ChatService.h  ConnectionProfileService.cpp  ConnectionProfileService.h  MessageService.cpp  MessageService.h  SignalingService.cpp  SignalingService.h  StunProbeService.cpp  StunProbeService.h  UserService.cpp  UserService.h  WebRTCService.cpp  WebRTCService.h
client/tests/: TestChatRepository.cpp
client/tests/repository/: TestChatMemberRepository.cpp  TestChatRepository.cpp  TestConnectionProfileRepository.cpp  TestMessageRepository.cpp  TestUserRepository.cpp
client/tests/service/: TestChatMemberService.cpp  TestChatService.cpp  TestConfigurationProfile.cpp  TestMessageService.cpp  TestUserService.cpp
docs/: p3express.md
docs/src/: Morze.mpp  Morze_Risks.xlsx  use-case.puml
docs/src/er/: er-client.drawio  er-server.drawio
docs/src/sequence/: sequence.puml
docs/src/use-case/: use-case.puml
metrics/: build_dashboard.sh  collect.sh  collect_jira.py  dashboard.html
server/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
server/include/: signaling_server.hpp
server/include/application/: message_handler.hpp  protocol.hpp
server/include/domain/: models.hpp  room_registry.hpp  room_store.hpp
server/include/infrastructure/: http_detect_session.hpp  listener.hpp  logger.hpp  ws_session.hpp
server/include/infrastructure/persistence/: sqlite_room_store.hpp
server/src/: main.cpp  signaling_server.cpp
server/src/application/: message_handler.cpp  protocol.cpp
server/src/domain/: room_registry.cpp
server/src/infrastructure/: http_detect_session.cpp  listener.cpp  ws_session.cpp
server/src/infrastructure/persistence/: sqlite_room_store.cpp
server/tests/: room_registry_tests.cpp  signaling_server_tests.cpp
server/tests/e2e/: signaling_tests.cpp
server/tests/e2e_client/: communication_controller_tests.cpp  signaling_service_tests.cpp
server/tests/e2e_client/fixture/: client_e2e_fixture.cpp  client_e2e_fixture.hpp
server/tests/e2e_p2p_chat/: group_e2e_tests.cpp  p2p_e2e_tests.cpp
server/tests/e2e_p2p_chat/clients/: p2p_chat_test_client.cpp  p2p_chat_test_client.hpp
server/tests/e2e_p2p_chat/fixture/: p2p_fixture.cpp  p2p_fixture.hpp
server/tests/e2e_signaling/: persistence_tests.cpp  signaling_tests.cpp
server/tests/e2e_signaling/clients/: ws_test_client.cpp  ws_test_client.hpp
server/tests/e2e_signaling/fixtures/: signaling_e2e_fixture.cpp  signaling_e2e_fixture.hpp
server/tests/units/: room_registry_tests.cpp  signaling_server_tests.cpp  sqlite_room_store_tests.cpp
